@@ -19,6 +19,7 @@
 - use proper docstring (pull/130)
 - remove deprecated SIGNAL_RUN_LAST (pull/134)
 - use remote ppd for CUPS shared queues (pull/137)
+- get rid of warnings in applet (Fedora issue #1732890)
 
 1.5.10 changes
 --------------
